k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spendify-api
  namespace: spendify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spendify-api
  template:
    metadata:
      labels:
        app: spendify-api
    spec:
      containers:
        - name: api
          image: spendify-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
