k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spendify-service
  namespace: spendify
spec:
  selector:
    app: spendify-api
  ports:
    - protocol: TCP
      port: 80 # Este es el puerto interno del servicio
      targetPort: 3001 # Puerto donde corre la API en el contenedor
  type: ClusterIP
