k8s/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: spendify-api-ingress
  namespace: spendify
spec:
  entryPoints:
    - websecure # Maneja HTTPS automáticamente
  routes:
    - match: Host(`spendify-api.jvebri.pro`)
      kind: Rule
      services:
        - name: spendify-service
          port: 80 # Puerto del servicio dentro de Kubernetes
  tls:
    certResolver: letsencrypt # Activa HTTPS
